[frontend] create home page with navigation

--- a/tendencia-frontend/src/app/login-page/login-page.component.scss
+++ b/tendencia-frontend/src/app/login-page/login-page.component.scss
@@ -15,17 +15,6 @@
   background: linear-gradient(to right, #f6f1d3, #648880 65%, #293f50);
 }
 
-.input-container {
-  @extend .flex-box;
-  width: 25%;
-  height: 40%;
-
-  justify-content: space-around;
-
-  background: #ffffff;
-  border-radius: 6px;
-}
-
 .login-title {
   margin-bottom: 40px;
 
@@ -34,20 +23,14 @@
   color: #ffffff;
 }
 
-.login-field {
-  width: 90%;
-}
-
 .login-button {
-  width: 70%;
+  width: 160px;
 
-  color: #648880;
+  color: #e91e63;
 }
 
-.material-icons.md-18 {
-  font-size: 18px;
-}
-
-.material-icons.blue {
-  color: #648880;
-}
+/*{
+  #6897bb
+  #a9b7c6
+  #2b2b2b
+}*/
