--- a/tendencia-frontend/src/app/home-page/home-page.component.scss
+++ b/tendencia-frontend/src/app/home-page/home-page.component.scss
@@ -1,9 +1,35 @@
 .container {
   height: 100vh;
+
+  display: flex;
+  flex-direction: column;
+
   font-family: Roboto, Helvetica Neue, sans-serif;
-  //background: linear-gradient(to bottom, #e91e63, #2b2b2b 12%);
+}
+
+.chart-title-container {
+  height: 140px;
+
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
 
   background-color: #e91e63;
+}
+
+.chart-title {
+  font-size: 18px;
+  font-family: Roboto, sans-serif;
+  color: #ffffff;
+
+  margin-bottom: 16px;
+  margin-left: 25px;
+}
+
+.content-container {
+  height: 100%;
+
+  background-color: #2b2b2b;
 }
 
 .project-title {
@@ -25,7 +51,29 @@
   align-items: center;
 }
 
-.mat-toolbar {
+.mat-toolbar-home {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+
   background-color: #e91e63;
   box-shadow: 0 3px 5px -1px rgba(0, 0, 0, .2), 0 6px 10px 0 rgba(0, 0, 0, .14), 0 1px 18px 0 rgba(0, 0, 0, .12);
+}
+
+.content {
+  margin: 20px;
+}
+
+.nav-menu {
+  width: 240px;
+
+  background: rgba(0, 0, 0, .15);
+}
+
+.history-button {
+  width: 100%;
+
+  font-weight: bold;
+  color: #ffffff;
 }
