--- a/tendencia-frontend/src/app/home-page/home-page.component.scss
+++ b/tendencia-frontend/src/app/home-page/home-page.component.scss
@@ -26,12 +26,6 @@
   margin-left: 25px;
 }
 
-.content-container {
-  height: 100%;
-
-  background-color: #2b2b2b;
-}
-
 .project-title {
   font-family: "Chalkduster", sans-serif;
   color: #ffffff;
@@ -61,11 +55,8 @@
   box-shadow: 0 3px 5px -1px rgba(0, 0, 0, .2), 0 6px 10px 0 rgba(0, 0, 0, .14), 0 1px 18px 0 rgba(0, 0, 0, .12);
 }
 
-.content {
-  margin: 20px;
-}
-
 .nav-menu {
+  position: fixed;
   width: 240px;
 
   background: rgba(0, 0, 0, .15);
@@ -74,6 +65,39 @@
 .history-button {
   width: 100%;
 
+  display: flex;
+  align-items: flex-start;
+
   font-weight: bold;
   color: #ffffff;
+}
+
+.content-container {
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+
+  background-color: #2b2b2b;
+}
+
+.content {
+  width: 100%;
+  margin: 20px;
+}
+
+.chart-container {
+  margin-left: 260px;
+  //height: 1200px;
+
+  display: flex;
+  flex-direction: column;
+
+  //background: linear-gradient(to top, #f6f1d3, #648880 65%, #293f50);
+}
+
+.course-layout {
+  width: 100%;
+
+  display: flex;
+  justify-content: flex-end;
 }
