[frontend] dialog window for creating new charts

--- a/tendencia-frontend/src/app/home-page/home-page.component.html
+++ b/tendencia-frontend/src/app/home-page/home-page.component.html
@@ -21,6 +21,7 @@
 
       <span class="project-title">Tendencia</span>
       <span class="example-spacer"></span>
+      <i class="material-icons icon" (click)="createNewChart()">add_circle_outline</i>
       <i class="material-icons icon">favorite</i>
       <i class="material-icons icon">delete</i>
     </mat-toolbar-row>
